[sarthik]ADD: reset password API
