# src/controllers/user.controller.js
@@ -34,18 +34,16 @@ export const forgetPassword = async (req, res) => {
 
 export const resetPassword = async (req, res) => {
   try {
-    // const { id, token } = req.params;
-    console.log("-->Token", req.locals.token);
     const { password } = req.body;
-    const data = await UserService.resetPassword(password);
-    res.status(HttpStatus.OK).json({
-      data: data.data,
-      message: data.message
-    })
+    const userId = res.locals.user.userId;
+
+    console.log("-->Details", password, userId);
+
+    const data = await UserService.resetPassword(password, userId);
+
+    res.status(data.code).json(data);
   } catch (error) {
-    res.status(HttpStatus.BAD_REQUEST).json({
-      message: error.message
-    });
+    next(error);
   }
 
 }
